Fixed CSS Editor alignement

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -101,9 +101,14 @@
 		}
 
 		#changelogContainer,
+		#cssEditor,
 		.param {
 			margin-right: 12px;
 			margin-left: 12px;
+		}
+
+		#cssEditor {
+			width: calc(100% - 24px);
 		}
 
 		.signature {
