--- a/src/styles/_settings.scss
+++ b/src/styles/_settings.scss
@@ -718,7 +718,6 @@
 		border: none;
 		border-radius: 10px;
 		box-sizing: border-box;
-		margin: 0px 10px;
 	}
 
 	#importexport .param {
